--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,18 +11,18 @@ jobs:
         runs-on: windows-latest
 
         steps:
-            uses: actions/checkout@v4.1.0
-            uses: actions/setup-node@v3.8.1
+          - uses: actions/checkout@v4.1.0
+          - uses: actions/setup-node@v3.8.1
             with:
                 node-version: '18.18.2'
-            name: Cypress run
+          - name: Cypress run
             uses: cypress-io/github-action@v6.3.0
             continue-on-error: true
             with:
                 install-command: npm install
                 browser: chrome
                 start: npm start
-            name: Publish Report
+          - name: Publish Report
             uses: peaceiris/actions-github-pages@v3.1.12
             with:
                 github-token: ${{ secrets.GITHUB_TOKEN }}
