--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
+    "node": "^21.6.1",
     "start-server-and-test": "^2.0.1"
   }
 }
