--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,34 @@
 name: EBAC CI
 
 on:
-    push:
-        branches: [ main ]
+  push:
+    branches: [ main ]
 
-    workflow_dispatch:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    cypress:
-        runs-on: windows-latest
+  # This workflow contains a single job called "build"
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-        steps:
-          - uses: actions/checkout@v4.1.0
-          - uses: actions/setup-node@v3.8.1
-            with:
-                node-version: '18.18.2'
-          - name: Cypress run
-            uses: cypress-io/github-action@v6.3.0
-            continue-on-error: true
-            with:
-                install-command: npm install
-                browser: chrome
-                start: npm run cy:run-ci
-          - name: Publish Report
-            uses: peaceiris/actions-github-pages@v3.1.12
-            with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-                publish_dir: ./mochawesome-report
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        continue-on-error: true
+        with:
+          install-command: npm install
+          browser: chrome
+          start: npm start
+      - name: Publish Report
+        uses: peaceiris/actions-gh-pages@v3.9.3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./mochawesome-report
